--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 </style>
 
 <body>
+  <!-- sample layout -->
+  <div class="description">
+    <h1 class="graphTitle">
+
+    </h1>
+    <p class="graphContent">
+      
+    </p>
+  </div>
+
+
 
   <p id="projectTitle">
     <center>
