--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>project 3: Tree Census in New York City</title>
+  <title>Project Three: Tree Census in New York City</title>
   <meta charset="UTF-8">
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://d3js.org/topojson.v2.min.js"></script>
@@ -239,70 +239,16 @@
 
       const pop = await d3.csv("./zip_code_database_pop.csv");
 
-      const zipMax = d3.max(zip.features, d => d['properties']['postalCode']);
-      const zipMin = d3.min(zip.features, d => d['properties']['postalCode'])
-
-      const zipTreeMax = d3.max(tree, d => Number(d['postcode']));
-      const zipTreeMin = d3.min(tree, d => Number(d['postcode']));
       const treeMinMax = d3.extent(tree, d => Number(d['postcode']));
 
       const treeArray = await d3.json("./treeArray.json");
-      // var treeArray = [];
-      // const treeMap = new Map();
-      // tree.forEach((d, i) => {
-      //   var postcode = d['postcode'];
-      //   if (!treeMap.has(postcode)) {
-      //     treeMap.set(postcode, true);
-
-      //     treeArray.push({
-      //       postcode: postcode,
-      //       borough: d['borough'],
-      //       number: 1
-      //     })
-      //     // cuisine.push(cui);
-      //   } else if (treeMap.has(postcode)) {
-      //     treeArray.find(function(e) {
-      //       return e.postcode == postcode;
-      //     }).number++;
-      //   }
-      // });
+ 
       //////////////////////// treemap //////////////////////
       const treeNumMinMax = [7, 22186];
       const ManhattanMinMax = [7, 3696];
-      // console.log(treeNumMinMax); // [7, 22186]
-      // console.log(ManhattanMinMax); // [7, 3696]
 
       var treeColorScale = d3.scaleSequential(d3.interpolateGreens).domain([7, treeNumMinMax[1] / 5]);
-      var testScale = d3.scaleSequential(d3.interpolateGreens).domain([0, 199 / 5]);
-      var mapLegend = d3.select("#mapLegend")
-
-        .attr("width", 200)
-        .attr("height", 50)
-        .append("g")
-      var legendWidth = 200;
-      const barScale = d3.scaleLinear().domain([7, 22186]).range([0, 100]);
-      const barAxis = d3.axisBottom().scale(barScale);
-      mapLegend.append("g")
-        .attr("class", "axis")
-        .attr("transform", "translate(" + (20) + "," + (55) + ")")
-        .call(barAxis);
-      mapLegend.selectAll(".legend")
-        .data(d3.range(legendWidth), function (d) { return d; })
-        .enter()
-        .append("rect")
-        .attr("class", "legend")
-        .attr("x", function (d, i) {
-          // console.log(i);
-
-          return i;
-        })
-        .attr("y", 0)
-        .attr("height", 50)
-        .attr("width", 1)
-        .style("fill", function (d, i) {
-
-          return testScale(d);
-        })
+      
 
       function changeColorScale(max) {
         treeColorScale = d3.scaleSequential(d3.interpolateGreens).domain([7, max]);
@@ -405,32 +351,31 @@
         }) //end of map(function(major){
       }; //end of var declaration
 
-      var type = {
-        "key": "nyc",
-        "values": d3.nest()
-          // .key(function(d) { return d['state']; })
-          .key(function(d) {
-            return d['spc_common'];
-          })
-          .rollup(function(leaves) {
-            return leaves.length;
-          })
-          .entries(tree)
-      }
+      // var type = {
+      //   "key": "nyc",
+      //   "values": d3.nest()
+      //     // .key(function(d) { return d['state']; })
+      //     .key(function(d) {
+      //       return d['spc_common'];
+      //     })
+      //     .rollup(function(leaves) {
+      //       return leaves.length;
+      //     })
+      //     .entries(tree)
+      // }
 
-      var typeTree = {
-        "name": "nyc",
-        "children": type.values.map(function(spc) {
-          return {
-            "name": spc.key,
-            "value": spc.value
-          };
-        })
-      };
+      // var typeTree = {
+      //   "name": "nyc",
+      //   "children": type.values.map(function(spc) {
+      //     return {
+      //       "name": spc.key,
+      //       "value": spc.value
+      //     };
+      //   })
+      // };
 
-
+      var typeTree = await d3.json("./typeTree.json");
       var typeRoot = d3.hierarchy(typeTree).sum(d => d.value);
-
       var root = d3.hierarchy(treeData)
         .sum(function(d) {
 
@@ -440,8 +385,12 @@
       // .sort((a, b) => b.values - a.values)
 
 
-      const ntaMinMax = d3.extent(root.leaves(), d => Number(d['value']));
-      const typeMinMax = d3.extent(typeRoot.leaves(), d => Number(d['value']));
+      // const ntaMinMax = d3.extent(root.leaves(), d => Number(d['value']));
+      // [ 4, 12969 ]
+      // const typeMinMax = d3.extent(typeRoot.leaves(), d => Number(d['value']));
+      // [ 10, 87014 ]
+      const ntaMinMax = [ 4, 12969 ];
+      const typeMinMax = [ 10, 87014 ];
 
       var ntaColorScale = d3.scaleSequential(d3.interpolateGreens).domain([ntaMinMax[0], ntaMinMax[1] / 2]);
       var typeColorScale = d3.scaleSequential(d3.interpolateYlGn).domain([typeMinMax[0], typeMinMax[1] / 2]);
@@ -464,7 +413,6 @@
         }
       });
 
-      console.log(zip_name["11374"]);
       //array of just nyc zip codes
       nyc_pop = pop.filter(d => all_zip.includes(d['zip']));
 
@@ -728,7 +676,7 @@
           d3.select(this).style("stroke", "black").style("stroke-width", 1);
         });
 
-
+      // stacked bar chart
       const dataset = await d3.json("./typeByBorough.json");
       var barMargin = {
         top: 20,
@@ -744,7 +692,7 @@
         .attr("height", height + barMargin.top + barMargin.bottom)
         .append("g")
         .attr("transform", "translate(" + barMargin.left + "," + barMargin.top + ")");
-
+      // create scale for x and y 
       var xScale = d3.scaleBand()
         .domain(dataset[0].map(function(d) {
           return d.x;
@@ -759,13 +707,8 @@
           });
         })])
         .range([height, 0]);
-
-
-
       var yAxis = d3.axisLeft(yScale)
-
-
-        .ticks(5)
+        .ticks(8)
         .tickSize(-width, 0, 0)
         .tickFormat(function(d) {
           return d
@@ -801,7 +744,7 @@
         })
         .style("stroke", "white")
 
-
+        
       var rect = groups.selectAll("rect")
         .data(function(d) {
           return d;
@@ -809,8 +752,6 @@
         .enter()
         .append("rect")
         .attr("x", function(d, i) {
-
-
           return i * 20;
         })
         .attr("y", function(d) {
@@ -833,8 +774,6 @@
           tooltip.select("text").text(d.y + " " + cap(d.x) + " planted")
 
         });
-
-
 
       var barLegend = d3.select("#barLegend")
         .attr("width", 750)
